--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
 
         <section class="about-text">
           <p>
-           I'm a Technical Trainer and Researcher from India, specializing in AI, IoT, Robotics, and Programming Education. 
-           I focus on transforming complex technologies into accessible, hands-on learning experiences.
+Where code meets creativity and innovation becomes hands-on, emerges a practice that transforms buzzwords like AI, IoT, and Robotics into meaningful, real-world applications. Through immersive, project-based learning and research-driven initiatives, complex ideas are turned into tools that inspire action rather than passive understanding.
+From neural networks to intelligent machines, the approach is always interactive — bootcamps, prototypes, and experimental models that enable learners and professionals alike to build what once felt impossible.
           </p>
 
           <p>
-            My role is to equip students and professionals with industry-relevant skills through interactive workshops, coding bootcamps, and project-based learning. I bring a creative, practical approach to every session, ensuring concepts are both understood and applied. My goal is to bridge the gap between academic theory and real-world innovation. 
-            I’ve trained learners across top institutes and mentored numerous projects that merge AI and IoT into impactful, functional solutions.
+           The focus remains clear: bridging academic theory with tomorrow’s technology-driven world. With a proven track record of training across leading institutes, publishing research, mentoring interdisciplinary projects, and applying innovation to patents, the work stands firmly at the intersection of trainer, researcher, and innovator.
+This journey is not just STEM — it’s STEAM: Science, Technology, Engineering, Arts, and Mathematics blended with imagination, research, and impact.
           </p>
         </section>
 
