--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
 
       <li class="timeline-item">
         <h4 class="h4 timeline-item-title">Master of Science in Mathematics</h4>
-        <span>2013 — 2015</span>
+<!--         <span>2013 — 2015</span> -->
         <p class="timeline-text">
           Completed with a CGPA of 8.12 from Chatrapati Sahuji Maharaj University, Kanpur. Focused on analytical problem-solving and mathematical modeling.
         </p>
@@ -500,7 +500,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
 
       <li class="timeline-item">
         <h4 class="h4 timeline-item-title">Bachelor of Science</h4>
-        <span>2010 — 2013</span>
+<!--         <span>2010 — 2013</span> -->
         <p class="timeline-text">
           Graduated with a CGPA of 7.3, building a strong foundation in mathematics and logical reasoning for future specialization in AI and IoT domains.
         </p>
@@ -522,37 +522,53 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
 
     <ol class="timeline-list">
 
-      <li class="timeline-item">
-        <h4 class="h4 timeline-item-title">IoT & Robotics Trainer – BrightChamps (Freelance)</h4>
-        <span>2021 — Present</span>
-        <p class="timeline-text">
-          Designed and delivered comprehensive IoT and robotics training programs, integrating AI applications and real-world smart system solutions.
-        </p>
-      </li>
+<li class="timeline-item">
+  <h4 class="h4 timeline-item-title">STEM Educator & Designer</h4>
+  <!-- <span>2017 — Present</span> -->
+  <p class="timeline-text">
+    Translated STEM concepts into immersive experiences — from robotics labs to AI-driven learning journeys. Designed interdisciplinary education models for academia and industry, ensuring that knowledge and application evolve together.
+  </p>
+</li>
 
-      <li class="timeline-item">
-        <h4 class="h4 timeline-item-title">STEM Educator & Designer</h4>
-        <span>2017 — Present</span>
-        <p class="timeline-text">
-          Led interdisciplinary projects in AI, robotics, and design thinking; mentored students through practical projects and workshops across India.
-        </p>
-      </li>
+<li class="timeline-item">
+  <h4 class="h4 timeline-item-title">IoT & Robotics Trainer</h4>
+  <!-- <span>2018 — Present</span> -->
+  <p class="timeline-text">
+    Guided learners in building intelligent systems that sense, move, and decide. Focused on transforming IoT and robotics from static diagrams into working prototypes that reflect the intelligence of future technologies.
+  </p>
+</li>
 
-      <li class="timeline-item">
-        <h4 class="h4 timeline-item-title">Trainer – GEN AI & Innovation (IIT Hyderabad, VNIT, DTU, etc.)</h4>
-        <span>2020 — 2024</span>
-        <p class="timeline-text">
-          Conducted bootcamps and capstone project guidance in Generative AI and machine learning for top-tier engineering institutes.
-        </p>
-      </li>
+<li class="timeline-item">
+  <h4 class="h4 timeline-item-title">Generative AI Trainer & Science Communicator</h4>
+  <!-- <span>2020 — Present</span> -->
+  <p class="timeline-text">
+    Conducted immersive programs on AI, machine learning, and generative models across IITs, universities, and innovation ecosystems. Simplified complex systems into approachable, actionable, and inspiring projects, bridging research with real-world applications.
+  </p>
+</li>
 
-      <li class="timeline-item">
-        <h4 class="h4 timeline-item-title">Mentor of Change – Atal Innovation Mission, NITI Aayog</h4>
-        <span>2018 — Present</span>
-        <p class="timeline-text">
-          Mentored school and college students in innovation challenges and national-level hackathons, promoting entrepreneurship and tech learning.
-        </p>
-      </li>
+<li class="timeline-item">
+  <h4 class="h4 timeline-item-title">Mentor of Change – Atal Innovation Mission, NITI Aayog</h4>
+  <!-- <span>2018 — Present</span> -->
+  <p class="timeline-text">
+    Served as a Mentor of Change, nurturing curiosity and innovation at Atal Tinkering Labs. Helped students transform raw ideas into practical prototypes with real-world impact.
+  </p>
+</li>
+
+<li class="timeline-item">
+  <h4 class="h4 timeline-item-title">Vice President – Junior Chamber International (Individual Opportunity)</h4>
+  <!-- <span>2019 — 2021</span> -->
+  <p class="timeline-text">
+    Led initiatives beyond training — from social awareness campaigns to donation drives and large-scale workshops. Proved that innovation extends beyond technology, shaping communities and fostering inclusive growth.
+  </p>
+</li>
+
+<li class="timeline-item">
+  <h4 class="h4 timeline-item-title">Research & Innovation</h4>
+  <!-- <span>2018 — Present</span> -->
+  <p class="timeline-text">
+    Filed a national patent for an AI-based Lanthanide Garnet Phosphor Classification Device and published three research papers contributing to applied AI and interdisciplinary technologies.
+  </p>
+</li>
 
     </ol>
 
