--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="#">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-plant.jpg" alt="Plant Health Monitoring" loading="lazy">
+            <img src="./assets/images/Plant-monitoring-system-2000-x-800.jpg" alt="Plant Health Monitoring" loading="lazy">
           </figure>
           <h3 class="project-title">Plant Health Monitoring & Control System</h3>
           <p class="project-category">Sustainability</p>
@@ -712,7 +712,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="#">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-wireless.jpg" alt="Wireless Charging Lane" loading="lazy">
+            <img src="./assets/images/wireless-charging-lane.jpeg" alt="Wireless Charging Lane" loading="lazy">
           </figure>
           <h3 class="project-title">Wireless Charging Lane</h3>
           <p class="project-category">Sustainability</p>
@@ -724,7 +724,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="#">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-automation.jpg" alt="Automation Systems" loading="lazy">
+            <img src="./assets/images/Automation-Systems-1.webp" alt="Automation Systems" loading="lazy">
           </figure>
           <h3 class="project-title">Automation Systems</h3>
           <p class="project-category">IoT & Robotics</p>
@@ -735,7 +735,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="#">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-street.jpg" alt="Smart Street Control" loading="lazy">
+            <img src="./assets/images/smart-street.webp" alt="Smart Street Control" loading="lazy">
           </figure>
           <h3 class="project-title">Smart Street Control System</h3>
           <p class="project-category">IoT & Robotics</p>
@@ -747,7 +747,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="#">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-edu.jpg" alt="Experimental Education Models" loading="lazy">
+            <img src="./assets/images/experimental-edu-model.jpg" alt="Experimental Education Models" loading="lazy">
           </figure>
           <h3 class="project-title">Experimental Education Models</h3>
           <p class="project-category">Education Tools</p>
@@ -759,7 +759,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="https://huggingface.co/spaces/prajyot2003/gpt2-text-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-ai.jpg" alt="Prajyot GPT-2 Generator" loading="lazy">
+            <img src="./assets/images/text-gen.jpeg" alt="Prajyot GPT-2 Generator" loading="lazy">
           </figure>
           <h3 class="project-title">Prajyot – GPT-2 Text Generator</h3>
           <p class="project-category">AI Projects</p>
@@ -770,7 +770,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="https://huggingface.co/spaces/slurpio/Megan-AI" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-nlp.jpg" alt="Megan AI" loading="lazy">
+            <img src="./assets/images/project-nlp.jp" alt="Megan AI" loading="lazy">
           </figure>
           <h3 class="project-title">Saksham Kochar – Megan AI</h3>
           <p class="project-category">AI Projects</p>
@@ -803,7 +803,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="https://huggingface.co/spaces/krishna34-aimlcurious/AI_ML_CURIOUS" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-curious.jpg" alt="AI_ML_CURIOUS" loading="lazy">
+            <img src="./assets/images/aiml.jpg" alt="AI_ML_CURIOUS" loading="lazy">
           </figure>
           <h3 class="project-title">Krishna – AI_ML_CURIOUS</h3>
           <p class="project-category">AI Projects</p>
@@ -814,7 +814,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="https://huggingface.co/spaces/sohamauluck/text-to-image-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-vision.jpg" alt="Text-to-Image Generator" loading="lazy">
+            <img src="./assets/images/text-to-image.webp" alt="Text-to-Image Generator" loading="lazy">
           </figure>
           <h3 class="project-title">Soham Auluck – Text-to-Image Generator</h3>
           <p class="project-category">AI Projects</p>
