--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="https://huggingface.co/spaces/slurpio/Megan-AI" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-nlp.jp" alt="Megan AI" loading="lazy">
+            <img src="./assets/images/ai.jpg" alt="Megan AI" loading="lazy">
           </figure>
           <h3 class="project-title">Saksham Kochar – Megan AI</h3>
           <p class="project-category">AI Projects</p>
@@ -781,7 +781,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="https://huggingface.co/spaces/deekshasoota/mygenaitext-generator" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/project-ml.jpg" alt="MyGenAI Text Generator" loading="lazy">
+            <img src="./assets/images/AI-Text-Generator.jpg" alt="MyGenAI Text Generator" loading="lazy">
           </figure>
           <h3 class="project-title">Deeksha Soota – MyGenAI Text Generator</h3>
           <p class="project-category">AI Projects</p>
