--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Akanksha Varma</h1>
 
-          <p class="title">STEM DESIGNER</p>
+          <p class="title">STEM EDUCATOR & RESEARCHER</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
