--- a/index.html
+++ b/index.html
@@ -362,17 +362,57 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
       </div>
     </li>
 
+    <!-- New Testimonial: Ishan Duraphe -->
+    <li class="testimonials-item">
+      <div class="content-card" data-testimonials-item>
+
+        <figure class="testimonials-avatar-box">
+          <!-- <img src="./assets/images/avatar-ishan.png" alt="Ishan Duraphe" width="60" data-testimonials-avatar> -->
+        </figure>
+
+        <h4 class="h4 testimonials-item-title" data-testimonials-title>Ishan Duraphe</h4>
+
+        <div class="testimonials-text" data-testimonials-text>
+          <p>
+            It was a great workshop at VNIT Nagpur. The lecture delivery was good and I learnt a lot in these 2 days.
+            Looking forward for more such workshops on such topics.
+          </p>
+        </div>
+
+      </div>
+    </li>
+
+    <!-- New Testimonial: Yogesh Bangalkar -->
+    <li class="testimonials-item">
+      <div class="content-card" data-testimonials-item>
+
+        <figure class="testimonials-avatar-box">
+          <!-- <img src="./assets/images/avatar-yogesh.png" alt="Yogesh Bangalkar" width="60" data-testimonials-avatar> -->
+        </figure>
+
+        <h4 class="h4 testimonials-item-title" data-testimonials-title>Yogesh Bangalkar</h4>
+
+        <div class="testimonials-text" data-testimonials-text>
+          <p>
+            It was an excellent workshop for me. I learned everything from basics to advanced. Thanks to Akanksha ma'am
+            who taught us everything regarding Generative AI and Chatbots.
+          </p>
+        </div>
+
+      </div>
+    </li>
+
   </ul>
 
 </section>
 
 
 
-        <!--
-          - testimonials modal
-        -->
+<!--
+  - testimonials modal
+-->
 
-      <div class="modal-container" data-modal-container>
+<div class="modal-container" data-modal-container>
 
   <div class="overlay" data-overlay></div>
 
@@ -409,6 +449,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
   </section>
 
 </div>
+
 
 
 
