--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+            <button class="navbar-link" data-nav-link>CV</button>
           </li>
 
           <li class="navbar-item">
@@ -459,7 +459,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">Collaborated With</h3>
 
           <ul class="clients-list has-scrollbar">
 
@@ -516,7 +516,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
       <article class="resume" data-page="resume">
 
   <header>
-    <h2 class="h2 article-title">Resume</h2>
+    <h2 class="h2 article-title">CV</h2>
   </header>
 
   <!-- Education Section -->
