--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Resume</button>
+            <button class="navbar-link" data-nav-link>CV</button>
           </li>
 
           <li class="navbar-item">
@@ -516,7 +516,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
       <article class="resume" data-page="resume">
 
   <header>
-    <h2 class="h2 article-title">Resume</h2>
+    <h2 class="h2 article-title">CV</h2>
   </header>
 
   <!-- Education Section -->
