--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume" data-page="cv">
 
   <header>
     <h2 class="h2 article-title">CV</h2>
