--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="#">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/plant.jpg" alt="Plant Health Monitoring" loading="lazy">
+            <img src="./assets/images/plant-1.jpg" alt="Plant Health Monitoring" loading="lazy">
           </figure>
           <h3 class="project-title">Plant Health Monitoring & Control System</h3>
           <p class="project-category">Sustainability</p>
@@ -753,7 +753,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="#">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/charging lane.jpg" alt="Wireless Charging Lane" loading="lazy">
+            <img src="./assets/images/charging lane-1.jpg" alt="Wireless Charging Lane" loading="lazy">
           </figure>
           <h3 class="project-title">Wireless Charging Lane</h3>
           <p class="project-category">Sustainability</p>
@@ -765,7 +765,7 @@ This journey is not just STEM — it’s STEAM: Science, Technology, Engineering
         <a href="#">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/iot-device.jpg" alt="Automation Systems" loading="lazy">
+            <img src="./assets/images/iot.jpg" alt="Automation Systems" loading="lazy">
           </figure>
           <h3 class="project-title">Automation Systems</h3>
           <p class="project-category">IoT & Robotics</p>
